WebKit::WebPaymentCoordinator leak https://bugs.webkit.org/show_bug.cgi?id=159168 rdar://problem/26929772

Reviewed by Beth Dakin.

Source/WebCore:

* Modules/applepay/PaymentCoordinator.cpp:
(WebCore::PaymentCoordinator::~PaymentCoordinator):
Call paymentCoordinatorDestroyed().

* Modules/applepay/PaymentCoordinatorClient.h:
Rename mainFrameDestroyed to paymentCoordinatorDestroyed().

* loader/EmptyClients.cpp:

Source/WebKit/mac:

Update for WebCore changes.

* WebCoreSupport/WebPaymentCoordinatorClient.h:
* WebCoreSupport/WebPaymentCoordinatorClient.mm:
(WebPaymentCoordinatorClient::paymentCoordinatorDestroyed):
(WebPaymentCoordinatorClient::mainFrameDestroyed): Deleted.

Source/WebKit2:

Update for WebCore changes.

* WebProcess/ApplePay/WebPaymentCoordinator.cpp:
(WebKit::WebPaymentCoordinator::paymentCoordinatorDestroyed):
(WebKit::WebPaymentCoordinator::mainFrameDestroyed): Deleted.
* WebProcess/ApplePay/WebPaymentCoordinator.h:

Canonical link: https://commits.webkit.org/177317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202570 268f45cc-cd09-0410-ab3c-d52691b4dbfc