Source/WebCore/Modules/applepay/PaymentCoordinatorClient.h
@@ -50,7 +50,7 @@ public:
     virtual void completePaymentMethodSelection(Optional<WebCore::PaymentRequest::TotalAndLineItems> newTotalAndItems) = 0;
     virtual void completePaymentSession(PaymentAuthorizationStatus) = 0;
     virtual void abortPaymentSession() = 0;
-    virtual void mainFrameDestroyed() = 0;
+    virtual void paymentCoordinatorDestroyed() = 0;
 
 protected:
     virtual ~PaymentCoordinatorClient() { }
